# src/app/api/model/models.ts
@@ -64,7 +64,11 @@ export * from './paginated-team-invitation-list';
 export * from './paginated-team-join-request-list';
 export * from './paginated-team-list';
 export * from './password-reset-confirm';
+export * from './password-reset-confirm-response';
+export * from './password-reset-confirm-user';
 export * from './password-reset-request';
+export * from './password-reset-request-response';
+export * from './password-reset-request-response-code-enum';
 export * from './patched-attendance';
 export * from './patched-attendance-status-admin';
 export * from './patched-energy-segment-admin';
