# src/app/api/model/password-reset-confirm-response.ts
@@ -1,0 +1,18 @@
+/**
+ * Training Manager API
+ *
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+import { PasswordResetConfirmUser } from './password-reset-confirm-user';
+
+
+export interface PasswordResetConfirmResponse { 
+    access: string;
+    refresh: string;
+    user: PasswordResetConfirmUser;
+}
+
