# src/app/api/model/password-reset-confirm-user.ts
@@ -1,0 +1,20 @@
+/**
+ * Training Manager API
+ *
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+
+export interface PasswordResetConfirmUser { 
+    id: number;
+    username: string;
+    email: string;
+    first_name: string;
+    last_name: string;
+    language: string;
+}
+
