# src/app/api/model/password-reset-request-response-code-enum.ts
@@ -1,0 +1,19 @@
+/**
+ * Training Manager API
+ *
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+
+/**
+ * * `password_reset_processed` - password_reset_processed
+ */
+export enum PasswordResetRequestResponseCodeEnum {
+
+    PasswordResetProcessed = 'password_reset_processed'
+}
+
