# src/app/api/model/password-reset-request-response.ts
@@ -1,0 +1,19 @@
+/**
+ * Training Manager API
+ *
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+import { PasswordResetRequestResponseCodeEnum } from './password-reset-request-response-code-enum';
+
+
+export interface PasswordResetRequestResponse { 
+    detail: string;
+    code: PasswordResetRequestResponseCodeEnum;
+}
+
+
+
